; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_qp.c_qpn_hash.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_qp.c_qpn_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_ibdev = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qib_ibdev*, i32)* @qpn_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qpn_hash(%struct.qib_ibdev* %0, i32 %1) #0 {
  %3 = alloca %struct.qib_ibdev*, align 8
  %4 = alloca i32, align 4
  store %struct.qib_ibdev* %0, %struct.qib_ibdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.qib_ibdev*, %struct.qib_ibdev** %3, align 8
  %7 = getelementptr inbounds %struct.qib_ibdev, %struct.qib_ibdev* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @jhash_1word(i32 %5, i32 %8)
  %10 = load %struct.qib_ibdev*, %struct.qib_ibdev** %3, align 8
  %11 = getelementptr inbounds %struct.qib_ibdev, %struct.qib_ibdev* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = sub nsw i32 %12, 1
  %14 = and i32 %9, %13
  ret i32 %14
}

declare dso_local i32 @jhash_1word(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
